solved the style issue of margin collapsing

--- a/electron-react-app/src/Styles.css
+++ b/electron-react-app/src/Styles.css
@@ -1,3 +1,4 @@
+
 /*page*/
 .page{
   display: flex;
@@ -143,25 +144,16 @@ html, body {
   width: 100%;
 }
 
-.tips-container {
-  flex: 1;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  width: 60%;
-  margin: 1% 1% 1% 1%;
-  
-}
-
 .generatorstep2-container {
   flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin: 1% 1% 0 0;
+  margin: 1% 0 0 1% ;
+  padding: 0 1% 1% 1%;
   border-radius: 10px;
-  background-color: white;
+  background-color: whitesmoke;
   width: 100%;
 }
 
@@ -271,14 +263,15 @@ input::-webkit-inner-spin-button {
 
 /* Styles for status bar */
 .status-bar-container {
-  background-color: white;
+  background-color: lightblue;
   border-radius: 5px;
-  margin: 1%;
+  margin: 1% 1% 0 1%;
   display: flex;
   flex-direction: row;
   align-items: center;
   width: 100%;
   height: 50px;
+  box-sizing: border-box
 }
 
 .status-bar-container img {
@@ -287,12 +280,13 @@ input::-webkit-inner-spin-button {
   object-fit: contain;
 }
 
-.status-bar-container h4 {
+.status-bar-container h5 {
   flex: 0 0 30%;
 }
 
 .status-bar-container p {
   flex: 0 0 50%;
+  font-size: 14px;
 }
 
 /* Styles for RaioBtn */
